# projectify

./: .bumpversion.cfg  .gitignore  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  setup.py  sitemap.xml
.github/: CODE_OF_CONDUCT.es.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: docs-to-gh-pages.yml  gh-pages.yml  publish-to-pypi.yml  python-package.yml
api/: index.html
changelog/: index.html
commands/: index.html
contributing/: index.html
docs/: api.md  changelog.md  commands.md  contributing.md  faq.md  getting-started.md  index.md  install.md  license.md  roadmap.md  templates.md
faq/: index.html
getting-started/: index.html
install/: index.html
license/: index.html
projectify/: .gitignore  core.py
projectify/dashboard/: Makefile  main.py  requirements_dashboard.txt
projectify/dashboard/modules/: __init__.py  api.py  dashboard.py
projectify/models/: __init__.py  base_files.py  folders.py  ide_files.py
projectify/modules/: __init__.py  dependencies.py  environment.py  git_repository.py  header.py  ide_configuration.py  project_structure.py  setup_project.py
projectify/scripts/: __init__.py
roadmap/: index.html
search/: search_index.json
templates/: index.html
