[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projectify"
version = "0.1.5"
description = "A simple tool to create a Python project structure"
readme = "README.md"
authors = [{ name = "CyberIngeniero", email = "npinoa.ai@gmail.com" }]
requires-python = ">=3.8"
keywords = ["project", "structure", "python"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/CyberIngeniero/projectify"
Documentation = "https://github.com/CyberIngeniero/projectify"

[project.scripts]
projectify = "projectify.core:main"

[tool.flake8]
exclude = "__init__.py"
max-line-length = 127
ignore = ["E203", "E501", "W503"]

[tool.ruff]
exclude = ["__init__.py"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
